# MaplibreNative.NET

./: .gitignore  .gitmodules  CMakeLists.txt  README.md
Examples/Console/: Example.Console.sln
Examples/Console/Example.Console/: Example.Console.csproj  Program.cs
Examples/WPF/: Example.WPF.sln
Examples/WPF/Example.WPF/: App.xaml  App.xaml.cs  Example.WPF.csproj  Interop.cs  MainWindow.xaml  MainWindow.xaml.cs  RGBAToBGRAColorEffect.cs
include/: AlphaImage.h  AnimationOptions.h  AsyncRequest.h  BackendScope.h  BoundOptions.h  CameraOptions.h  CanonicalTileID.h  ClientOptions.h  Convert.h  EdgeInsets.h  Enums.h  ExternalRenderingContextBackend.h  ExternalRenderingContextFrontend.h  FileSource.h  FileSourceManager.h  FreeCameraOptions.h  GeoJSON.h  HeadlessFrontend.h  Image.h  LatLng.h  Map.h  MapObserver.h  MapOptions.h  NativePointerHolder.h  NativeWrapper.h  OverscaledTileID.h  Point.h  PremultipliedImage.h  Projection.h  ProjectionMode.h  Renderer.h  RendererBackend.h  RendererFrontend.h  RendererObserver.h  RenderingStats.h  Resource.h  ResourceOptions.h  ResourceTransform.h  Response.h  RunLoop.h  (+13 more)
src/: AlphaImage.cpp  AnimationOptions.cpp  AsyncRequest.cpp  BackendScope.cpp  BoundOptions.cpp  CameraOptions.cpp  CanonicalTileID.cpp  ClientOptions.cpp  EdgeInsets.cpp  ExternalRenderingContextBackend.cpp  ExternalRenderingContextFrontend.cpp  FileSource.cpp  FileSourceManager.cpp  FreeCameraOptions.cpp  GeoJSON.cpp  HeadlessFrontend.cpp  Image.cpp  LatLng.cpp  Map.cpp  MapObserver.cpp  MapOptions.cpp  OverscaledTileID.cpp  PremultipliedImage.cpp  Projection.cpp  ProjectionMode.cpp  Renderer.cpp  RendererBackend.cpp  RendererObserver.cpp  RenderingStats.cpp  Resource.cpp  ResourceOptions.cpp  ResourceTransform.cpp  Response.cpp  RunLoop.cpp  Shader.cpp  ShaderGroup.cpp  ShaderRegistry.cpp  Size.cpp  Style.cpp  TileCoordinate.cpp  (+7 more)
